# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/weather_agent/: agent_async.py  agent_sync.py  agent_sync_claude.py  agent_sync_langgraph.py  run_async.py  run_sync.py  stats_server.py  weather_server.py
src/mcp_s2sp/: __init__.py  direct_channel.py  errors.py  server.py
src/mcp_sd/: __init__.py  direct_channel.py  errors.py  server.py
src/mcp_sd/agent/: __init__.py  buffer.py  dispatch.py
src/mcp_sd/agent/adapters/: __init__.py  claude_agent_sdk.py  langgraph.py
tests/: test_adapter_claude_agent_sdk.py  test_adapter_langgraph.py  test_dispatcher.py  test_s2s_tool.py
