[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-s2sp"
version = "0.1.0"
description = "Server-to-Server (S2SP) data transfer protocol for MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0,<2.0",
    "httpx>=0.27.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
demos = [
    "matplotlib>=3.7",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]
inspector = [
    "mcp[cli]>=1.26.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_s2sp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
