[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sd"
version = "0.1.2"
description = "MCP-SD reference implementation: Selective Disclosure for MCP with a Server-to-Server data plane"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0,<2.0",
    "httpx>=0.27.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://mcp-sd.github.io/"
Repository = "https://github.com/mcp-sd/python-sdk"
Documentation = "https://mcp-sd.github.io/"
Issues = "https://github.com/mcp-sd/python-sdk/issues"

[project.optional-dependencies]
demos = [
    "matplotlib>=3.7",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]
inspector = [
    "mcp[cli]>=1.26.0,<2.0",
]
# Agent-framework adapters (Layer 2). Install only what you need.
claude-agent = [
    "claude-agent-sdk>=0.1.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
agents = [
    "claude-agent-sdk>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sd"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
